--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -25,7 +25,7 @@ Version: 1.0
     padding: 0px 10px;
 }
 .header-title{
-    font-family: 'effra-medium';
+    font-family: "tw-cen-mt";
     color: #00deb6;
     font-size: 24px;
     line-height: 1em;
@@ -130,20 +130,7 @@ Version: 1.0
     background-color: #00deb6!important;
     background-image: none!important;
 }
-/* ---------------------------- Footer -------------------------------- */
-.footer-bg{
-    position: fixed;
-    color: #484848;
-    bottom: 0;
-    width: 100%;
-    background-color: #FFF;
-    box-shadow: inset 0 1px 0 #ddd;
-    z-index: 999;
-}
-.footer-border{
-    border-top: 1px solid #ccc;
-    padding: 8px 2px;
-}
+
 
 /* --------------------- Mobile Device -------------------------------------  */
 @media (max-width : 767px) {
@@ -290,21 +277,21 @@ Version: 1.0
     list-style-type: none;
 }
 .dashboard-left-sidebar-ul > li > .active,.dashboard-left-sidebar-ul > li > .active:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     color: #484848!important;
     font-weight: bold;
 }
 
 .dashboard-left-sidebar-ul > li > a{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     padding: 6px 0;
     font-size: 18px;
     color: #767676;
     line-height: 2em;
 }
 .dashboard-left-sidebar-ul > li > a:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
     color: #bbbbbb;
@@ -318,21 +305,21 @@ Version: 1.0
     list-style-type: none;
 }
 .featured-ad-left-sidebar-ul > li > .active,.featured-ad-left-sidebar-ul > li > .active:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     color: #484848!important;
     font-weight: bold;
 }
 
 .featured-ad-left-sidebar-ul > li > a{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     padding: 6px 0;
     font-size: 18px;
     color: #767676;
     line-height: 2em;
 }
 .featured-ad-left-sidebar-ul > li > a:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
     color: #bbbbbb;
@@ -346,21 +333,21 @@ Version: 1.0
     list-style-type: none;
 }
 .profile-left-sidebar-ul > li > .active,.profile-left-sidebar-ul > li > .active:hover{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     color: #484848!important;
     font-weight: bold;
 }
 
 .profile-left-sidebar-ul > li > a{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     padding: 6px 0;
     font-size: 18px;
     color: #767676;
     line-height: 2em;
 }
 .profile-left-sidebar-ul > li > a:hover,profile-left-sidebar-ul > li > a:focus,profile-left-sidebar-ul > li > a:visited{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
     color: #bbbbbb;
@@ -435,7 +422,7 @@ Version: 1.0
 /* ---------------------------- Dashboard -------------------------------- */
 .dashboard-welcome-note{
     font-size: 24px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-align: center;
     color: #fff;
     border-top-left-radius: 4px; 
@@ -446,7 +433,7 @@ Version: 1.0
 /* ---------------------------- Saved Ads -------------------------------- */
 .saved-ads-product-heading{
     font-size: 24px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-align: center;
     color: #fff;
     border-top-left-radius: 4px; 
@@ -464,7 +451,7 @@ Version: 1.0
 }
 .saved-ads-product-title{
     font-size: 16px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     line-height: 1.5em;
     overflow: hidden;
@@ -474,24 +461,24 @@ Version: 1.0
 }
 .saved-ads-product-description{
     font-size: 13px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     line-height: 1.2em;
     font-weight: normal;
 }
 .saved-ads-product-price-title,.saved-ads-product-id-title{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #777;
 }
 .saved-ads-product-price-amount,.saved-ads-product-id{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #222;
     font-size: 16px;
 }
 /* ---------------------------- My Ads -------------------------------- */
 .my-ads-product-heading{
     font-size: 24px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     text-align: center;
     color: #fff;
     border-top-left-radius: 4px; 
@@ -509,7 +496,7 @@ Version: 1.0
 }
 .my-ads-product-title{
     font-size: 16px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     line-height: 1.5em;
     overflow: hidden;
@@ -519,17 +506,17 @@ Version: 1.0
 }
 .my-ads-product-description{
     font-size: 13px;
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     line-height: 1.2em;
     font-weight: normal;
 }
 .my-ads-product-price-title,.my-ads-product-id-title{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #777;
 }
 .my-ads-product-price-amount,.my-ads-product-id{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #222;
     font-size: 16px;
 }
@@ -539,7 +526,7 @@ Version: 1.0
     padding: 1px 55px;
 }
 .message-inbox-header-title{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #fff;
     font-family: sans-serif;
 }
@@ -563,7 +550,7 @@ Version: 1.0
     float: right;
 }
 .message-inbox-sender-name{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     font-size: 22px;
     margin-top: 0px;
@@ -571,7 +558,7 @@ Version: 1.0
     line-height: 100%;
 }
 .message-inbox-message-subject{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     font-size: 15px;
     margin-top: 0px;
@@ -579,7 +566,7 @@ Version: 1.0
     line-height: 100%;
 }
 .message-inbox-mesage-delete-icon{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-size: 15px;
     color: #484848;
 }
@@ -602,17 +589,20 @@ Version: 1.0
     padding: 10px;
     border-radius: 4px;
 }
+.featured-ad-stats-account-summary-title{
+    margin-top: -8px;
+}
 .featured-ad-stats-account-summary-layout > h4{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
 }
 .featured-ad-stats-account-summary-title{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     font-weight: bold;
 }
 .featured-ad-stats-account-summary-content{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     font-weight: normal;
 }
@@ -627,7 +617,7 @@ Version: 1.0
     border-radius: 0!important;
 }
 .home-page-search-box-layout > typeahead-container > ul > li > a{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #484848;
     background-image: none!important;
     background-color: #fff!important;
@@ -636,19 +626,19 @@ Version: 1.0
 .home-page-search-box-layout > typeahead-container > ul > li > a:hover,
 .home-page-search-box-layout > typeahead-container > ul > li > a:focus,
 .home-page-search-box-layout > typeahead-container > ul > li > a:visited{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     background-image: none!important;
     background-color: #00DEB6!important;
     color: #FFF!important;
 }
 .home-page-search-box-header-text{
-    font-family: 'effra-medium';
+    font-family: "tw-cen-mt";
     color: #00deb6;
     line-height: 1.5em;
     font-size: 28px;
 }
 .home-page-search-box-small-text{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     color: #fff;
     line-height: 1.2em;
     font-size: 16px;
@@ -661,7 +651,7 @@ Version: 1.0
     border-top-right-radius: 4px;
 }
 .user-profile-dashboard-header{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #fff;
     line-height: 1em;
@@ -674,38 +664,72 @@ Version: 1.0
     margin: 0!important;
 }
 .user-profile-dashboard-content-layout{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #484848;
 }
 .user-profile-dashboard-content-layout p{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #484848;
     margin: 10px 0;
 }
+.default-bid-per-click input{
+    float: left;
+    width: 75%;
+}
+.default-bid-per-click span{
+    float: right;
+    color: #484848;
+    font-size: 16px;
+    font-weight: normal;
+    margin-top: 4px;
+    float: left;
+    margin-left: 5px;
+}
+.daily-budget input{
+    float: left;
+    width: 75%;
+}
+.daily-budget span{
+    float: right;
+    color: #484848;
+    font-size: 16px;
+    font-weight: normal;
+    margin-top: 4px;
+    float: left;
+    margin-left: 5px;
+}
 .user-profile-dashboard-content-layout .fa-success, 
-.user-account-settings-compaign-status .fa-success,
-.individual-ad-bids-table .fa-success{
-    font-family: 'effra-regular';
+.user-account-settings-compaign-status .fa-success{
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #006e1f;
     font-size: 14px;
     margin-top: 12px;
 }
 .user-profile-dashboard-content-layout .fa-disable, 
-.user-account-settings-compaign-status .fa-disable,
-.individual-ad-bids-table .fa-disable{
-    font-family: 'effra-regular';
+.user-account-settings-compaign-status .fa-disable{
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: red;
     font-size: 14px;
     margin-top: 12px;
 }
-
+.user-profile-dashboard-content-layout input,
+.user-profile-dashboard-content-layout i,
+.user-profile-dashboard-content-layout span
+{
+    font-family: "tw-cen-mt";
+    font-weight: normal;
+    font-size: 14px;
+}
+.radio_inline{
+    margin-top: 12px;
+}
 /* --------------------- Create Advertise -------------------------------------  */
 .create-ad-label{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #484848;
     font-size: 16px;
@@ -716,7 +740,7 @@ Version: 1.0
 }
 /* --------------------- Edit Profile -------------------------------------  */
 .edit-profile-label{
-    font-family: 'effra-regular';
+    font-family: "tw-cen-mt";
     font-weight: normal;
     color: #484848;
     font-size: 16px;
@@ -730,4 +754,9 @@ Version: 1.0
     .individual-ad-bids-table .fa-disable{
         margin-top: 0!important;
     }
+}
+/* --------------------- Datepicker  -------------------------------------  */
+.start-date{
+    position: absolute; 
+    z-index: 99999; 
 }
