--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -168,6 +168,9 @@ Version: 1.0
     .profile-left-sidebar-margin-top-align{
         margin-top: 20px!important;
     }
+    .featured-ad-left-sidebar-margin-top-align{
+        margin-top: 20px!important;
+    }
 }
 
 /* --------------------- Tablet Device -------------------------------------  */
@@ -182,7 +185,7 @@ Version: 1.0
         color: #fff!important;
     }
     .header-custom-nav li a{
-        padding: 15px 35px;
+        padding: 15px 30px;
     }
     .dropdown-img-custom-button{
         margin-top: 3px;
@@ -203,10 +206,13 @@ Version: 1.0
         float: none!important; 
     }
     .margin-top-align{
-        margin-top: 80px!important;
+        margin-top: 20px!important;
     }
     .profile-left-sidebar-margin-top-align{
-        margin-top: 50px!important;
+        margin-top: 20px!important;
+    }
+    .featured-ad-left-sidebar-margin-top-align{
+        margin-top: 20px!important;
     }
 }
 /* --------------------- Medium Device -------------------------------------  */
@@ -248,6 +254,9 @@ Version: 1.0
     .profile-left-sidebar-margin-top-align{
         margin-top: 50px!important;
     }
+    .featured-ad-left-sidebar-margin-top-align{
+        margin-top: 95px!important;
+    }
 }
 /* --------------------- Large Device -------------------------------------  */
 @media (min-width : 1200px) {
@@ -288,6 +297,9 @@ Version: 1.0
     }
     .profile-left-sidebar-margin-top-align{
         margin-top: 50px!important;
+    }
+     .featured-ad-left-sidebar-margin-top-align{
+        margin-top: 95px!important;
     }
 }
 /* -------------------------------- Common ----------------------------- */
