--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -10,16 +10,13 @@ Version: 1.0
 }
 .header-white-bg{
     background-color: #fff;
-    height: 60px;
 }
 .header-black-bg{
-    background-color: #484848; 
+    background-color: #206baf; 
     height: 100%; 
     width: 100%;
 }
 .header-logo {
-    height: 36px;
-    width: 90px;
     margin-left: 0px;
     margin-top: 7px;
     padding: 0px 10px;
@@ -34,28 +31,34 @@ Version: 1.0
 .header-custom-navbar{
     margin-bottom: 0px;
     border-radius: 0px;
-    background-color: #484848;
+    background-color: #206baf;
     background-image: none;
     border: none;
+    box-shadow: none;
 }
 .header-custom-nav li a{
-    color: #bbb!important;
+    font-family: "tw-cen-mt";
+    color: #fff !important;
+    font-size: 18px;
+    font-weight: normal;
 }
 .header-custom-nav li a:hover{
     color: #fff!important;
 }    
 .header-custom-navbar .navbar-nav>.open>a{
     background-image: none;
-    background-color: #484848;
+    background-color: #206baf; 
+    box-shadow: none;
 }
 .header-custom-navbar .navbar-nav>.open>a:hover,.header-custom-navbar .navbar-nav>.open>a:focus{
     background-image: none;
     color: #fff!important;
-    background-color: #00deb6;
+    background-color: #206baf; 
+    box-shadow: none;
 }
 .header-custom-nav > .active > a,.header-custom-nav > .active > a:hover{
     color: #fff!important;
-    background-color: #00deb6!important;
+    background-color: #f68521!important;
     background-image: none!important;
 }
 .header-custom-nav > .dropdown>.dropdown-menu> li>a{
@@ -65,7 +68,7 @@ Version: 1.0
     background-image: none!important;
 }
 .header-custom-nav > .dropdown>.dropdown-menu> li:hover{
-    background-color: #00deb6!important;
+    background-color: #f68521!important;
     background-image: none!important;
 }
 /*  Search Box  */
@@ -103,7 +106,7 @@ Version: 1.0
 }
 .dropdown-img button img{
     max-width: 40px;
-    background: rgb(0, 222, 182);
+    background: #f77320;
     border-radius: 50%;
     float: right;
 }
@@ -127,7 +130,7 @@ Version: 1.0
 }
 .dropdown-img.open > .dropdown-menu > li > a:hover{
     color: #fff!important;
-    background-color: #00deb6!important;
+    background-color: #206BAF!important;
     background-image: none!important;
 }
 
@@ -185,12 +188,10 @@ Version: 1.0
         color: #fff!important;
     }
     .header-custom-nav li a{
-        padding: 15px 30px;
+        padding: 15px 27px;
     }
     .dropdown-img-custom-button{
-        margin-top: 3px;
-        top: 6px;
-        position: relative;
+        margin-top: 40px;
     }
     .dropdown-img.open > .dropdown-menu{
         top: 58px;
@@ -227,10 +228,10 @@ Version: 1.0
         color: #fff!important;
     }
     .header-custom-nav li a{
-        padding: 15px 50px;
+        padding: 15px 45px;
     }
     .dropdown-img-custom-button{
-        margin-top: -62px;
+        margin-top: 45px;
     }
     .dropdown-img.open > .dropdown-menu{
         top: 58px;
@@ -255,7 +256,7 @@ Version: 1.0
         margin-top: 50px!important;
     }
     .featured-ad-left-sidebar-margin-top-align{
-        margin-top: 95px!important;
+         margin-top: 45px!important;
     }
 }
 /* --------------------- Large Device -------------------------------------  */
@@ -274,7 +275,7 @@ Version: 1.0
     }
     .dropdown-img-custom-button{
         padding: 8px 15px;
-        margin-top: 3px;
+        margin-top: 36px;
     }
     .dropdown-img.open > .dropdown-menu{
         top: 58px;
@@ -299,7 +300,7 @@ Version: 1.0
         margin-top: 50px!important;
     }
     .featured-ad-left-sidebar-margin-top-align{
-        margin-top: 95px!important;
+        margin-top: 45px!important;
     }
 }
 /* -------------------------------- Common ----------------------------- */
@@ -315,22 +316,23 @@ Version: 1.0
 .dashboard-left-sidebar-ul > li > .active,.dashboard-left-sidebar-ul > li > .active:hover{
     font-family: "tw-cen-mt";
     text-decoration: none;
-    color: #484848!important;
+    color: #F68521!important;
     font-weight: bold;
 }
 
 .dashboard-left-sidebar-ul > li > a{
     font-family: "tw-cen-mt";
+    text-decoration: none;
     padding: 6px 0;
     font-size: 18px;
-    color: #767676;
+    color: #216db1;
     line-height: 2em;
 }
 .dashboard-left-sidebar-ul > li > a:hover{
     font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
-    color: #bbbbbb;
+    color: #F68521;
     line-height: 2em;
 }
 /* ---------------------------- Feature Ad Left Sidebar Menu -------------------------------- */
@@ -343,7 +345,7 @@ Version: 1.0
 .featured-ad-left-sidebar-ul > li > .active,.featured-ad-left-sidebar-ul > li > .active:hover{
     font-family: "tw-cen-mt";
     text-decoration: none;
-    color: #484848!important;
+    color: #f68521!important;
     font-weight: bold;
 }
 
@@ -351,14 +353,14 @@ Version: 1.0
     font-family: "tw-cen-mt";
     padding: 6px 0;
     font-size: 18px;
-    color: #767676;
+    color: #216db1;
     line-height: 2em;
 }
 .featured-ad-left-sidebar-ul > li > a:hover{
     font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
-    color: #bbbbbb;
+    color: #f68521;
     line-height: 2em;
 }
 /* ---------------------------- Profile Left Sidebar Menu -------------------------------- */
@@ -371,7 +373,7 @@ Version: 1.0
 .profile-left-sidebar-ul > li > .active,.profile-left-sidebar-ul > li > .active:hover{
     font-family: "tw-cen-mt";
     text-decoration: none;
-    color: #484848!important;
+    color: #f68521 !important;
     font-weight: bold;
 }
 
@@ -379,14 +381,14 @@ Version: 1.0
     font-family: "tw-cen-mt";
     padding: 6px 0;
     font-size: 18px;
-    color: #767676;
+    color: #216db1;
     line-height: 2em;
 }
 .profile-left-sidebar-ul > li > a:hover,profile-left-sidebar-ul > li > a:focus,profile-left-sidebar-ul > li > a:visited{
     font-family: "tw-cen-mt";
     text-decoration: none;
     padding: 6px 0;
-    color: #bbbbbb;
+    color: #F68521;
     line-height: 2em;
 }
 /* ---------------------------- Manage Product Left Sidebar Menu -------------------------------- */
@@ -469,29 +471,21 @@ Version: 1.0
 
 /* ---------------------------- Dashboard -------------------------------- */
 .dashboard-welcome-note{
-    font-size: 24px;
+    font-size: 28px;
     font-family: "tw-cen-mt";
-    text-align: center;
-    color: #fff;
-    border-top-left-radius: 4px; 
-    border-top-right-radius: 4px; 
-    border: 1px solid #00deb6;
-    background-color: #00deb6;
+    color: #216db1;
+    margin-top: 25px;
 }
 /* ---------------------------- Saved Ads -------------------------------- */
 .saved-ads-product-heading{
-    font-size: 24px;
+    font-size: 28px;
     font-family: "tw-cen-mt";
-    text-align: center;
-    color: #fff;
-    border-top-left-radius: 4px; 
-    border-top-right-radius: 4px; 
-    border: 1px solid #00deb6;
-    background-color: #00deb6;
+    color: #216db1;
+    margin-top: 25px;
 }
 .saved-ads-product-layout{
     padding: 0px 25px;
-    border: 1px solid #bbb;
+    border: 1px solid #216db1;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -516,27 +510,23 @@ Version: 1.0
 }
 .saved-ads-product-price-title,.saved-ads-product-id-title{
     font-family: "tw-cen-mt";
-    color: #777;
+    color: #216db1;
 }
 .saved-ads-product-price-amount,.saved-ads-product-id{
-    font-family: "tw-cen-mt";
-    color: #222;
+ font-family: "tw-cen-mt";
+    color: #f68521;
     font-size: 16px;
 }
 /* ---------------------------- My Ads -------------------------------- */
 .my-ads-product-heading{
-    font-size: 24px;
+    font-size: 28px;
     font-family: "tw-cen-mt";
-    text-align: center;
-    color: #fff;
-    border-top-left-radius: 4px; 
-    border-top-right-radius: 4px; 
-    border: 1px solid #00deb6;
-    background-color: #00deb6;
+    color: #216db1;
+    margin-top: 25px;
 }
 .my-ads-product-layout{
     padding: 0px 25px;
-    border: 1px solid #bbb;
+    border: 1px solid #216db1;
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
@@ -561,16 +551,16 @@ Version: 1.0
 }
 .my-ads-product-price-title,.my-ads-product-id-title{
     font-family: "tw-cen-mt";
-    color: #777;
+    color: #216db1;
 }
 .my-ads-product-price-amount,.my-ads-product-id{
     font-family: "tw-cen-mt";
-    color: #222;
+    color: #f68521;
     font-size: 16px;
 }
 /* ---------------------------- Messages Inbox -------------------------------- */
 .message-inbox-header-layout{
-    background-color: #BBB;
+    background-color: #216db1;
     padding: 1px 55px;
 }
 .message-inbox-header-title{
@@ -588,12 +578,12 @@ Version: 1.0
     padding: 10px;
 }
 .message-inbox-content-layout:hover{
-    border-left: 5px solid #00deb6;
+    border-left: 5px solid #f68521;
     cursor: pointer;
 }
 .message-inbox-user-image{
     width: 60px;
-    background: rgb(0, 222, 182);
+    background: #f68521;
     border-radius: 50%;
     float: right;
 }
@@ -616,11 +606,11 @@ Version: 1.0
 .message-inbox-mesage-delete-icon{
     font-family: "tw-cen-mt";
     font-size: 15px;
-    color: #484848;
+    color: #216db1;
 }
 .message-inbox-mesage-delete-icon:hover{
     cursor: pointer;
-    color: #00deb6;
+    color: #f68521;
 }
 /* ---------------------------- Featured Ad Stats -------------------------------- */
 .featured-ad-stats-layout{
@@ -646,7 +636,7 @@ Version: 1.0
 }
 .featured-ad-stats-account-summary-title{
     font-family: "tw-cen-mt";
-    color: #484848;
+    color: #216db1;
     font-weight: bold;
 }
 .featured-ad-stats-account-summary-content{
@@ -694,7 +684,7 @@ Version: 1.0
 }
 /* --------------------- User Profile DashBoard -------------------------------------  */
 .user-profile-dashboard-header-layout{
-    background-color: #00deb6;
+    background-color: #f68521;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
@@ -724,7 +714,7 @@ Version: 1.0
 }
 .default-bid-per-click input{
     float: left;
-    width: 75%;
+    width: 95%;
 }
 .default-bid-per-click span{
     float: right;
@@ -737,7 +727,7 @@ Version: 1.0
 }
 .daily-budget input{
     float: left;
-    width: 75%;
+    width: 95%;
 }
 .daily-budget span{
     float: right;
@@ -768,7 +758,6 @@ Version: 1.0
 .user-profile-dashboard-content-layout i,
 .user-profile-dashboard-content-layout span
 {
-    font-family: "tw-cen-mt";
     font-weight: normal;
     font-size: 14px;
 }
@@ -776,6 +765,11 @@ Version: 1.0
     margin-top: 12px;
 }
 /* --------------------- Create Advertise -------------------------------------  */
+.create-ad-heading{
+    font-family: "tw-cen-mt";
+    font-size: 24px;
+    color: #216db1;
+}
 .create-ad-label{
     font-family: "tw-cen-mt";
     font-weight: normal;
@@ -786,15 +780,39 @@ Version: 1.0
 .amenity-title{
     margin-bottom: 2px;
 }
-/* --------------------- Edit Profile -------------------------------------  */
-.edit-profile-label{
+/* --------------------- Featured Ad -------------------------------------  */
+.featured-ad-heading{
+    font-family: "tw-cen-mt";
+    font-size: 24px;
+    color: #216db1;
+    margin-top: 36px;
+}
+.featured-ad-label{
     font-family: "tw-cen-mt";
     font-weight: normal;
-    color: #484848;
+    color: #216db1;
     font-size: 16px;
     font-weight: normal;
     margin-top: 5px;
 }
+/* --------------------- Edit Profile -------------------------------------  */
+.edit-profile-heading{
+    font-family: "tw-cen-mt";
+    font-weight: normal;
+    color: #216db1;
+    font-size: 24px;
+    font-weight: normal;
+    margin-top: 20px;
+}
+.edit-profile-label{
+    font-family: "tw-cen-mt";
+    font-weight: normal;
+    color: #216db1;
+    font-size: 16px;
+    font-weight: normal;
+    margin-top: 5px;
+}
+
 /* --------------------- Individual Ad Bids  -------------------------------------  */
 @media screen and (max-width: 600px) {
     .individual-ad-bids-table .fa-success{
