--- a/web/resources/css/member.css
+++ b/web/resources/css/member.css
@@ -19,7 +19,6 @@ Version: 1.0
 .header-logo {
     margin-left: 0px;
     margin-top: 7px;
-    padding: 0px 10px;
 }
 .header-title{
     font-family: "tw-cen-mt";
@@ -166,7 +165,7 @@ Version: 1.0
         float: none!important; 
     }
     .margin-top-align{
-        margin-top: 20px!important;
+        margin-top: 10px!important;
     }
     .profile-left-sidebar-margin-top-align{
         margin-top: 20px!important;
@@ -188,7 +187,7 @@ Version: 1.0
         color: #fff!important;
     }
     .header-custom-nav li a{
-        padding: 15px 27px;
+        padding: 15px 22px;
     }
     .dropdown-img-custom-button{
         margin-top: 40px;
@@ -207,7 +206,7 @@ Version: 1.0
         float: none!important; 
     }
     .margin-top-align{
-        margin-top: 20px!important;
+        margin-top: 10px!important;
     }
     .profile-left-sidebar-margin-top-align{
         margin-top: 20px!important;
@@ -228,7 +227,7 @@ Version: 1.0
         color: #fff!important;
     }
     .header-custom-nav li a{
-        padding: 15px 45px;
+        padding: 15px 40px;
     }
     .dropdown-img-custom-button{
         margin-top: 45px;
@@ -250,13 +249,13 @@ Version: 1.0
         width: 140px;
     }
     .margin-top-align{
-        margin-top: 80px!important;
+        margin-top: 10px!important;
     }
     .profile-left-sidebar-margin-top-align{
         margin-top: 50px!important;
     }
     .featured-ad-left-sidebar-margin-top-align{
-         margin-top: 45px!important;
+        margin-top: 45px!important;
     }
 }
 /* --------------------- Large Device -------------------------------------  */
@@ -278,7 +277,7 @@ Version: 1.0
         margin-top: 36px;
     }
     .dropdown-img.open > .dropdown-menu{
-        top: 58px;
+        top: 83px;
     }
     .header-navbar-container-fluid-adjust{
         margin-left: -30px!important;  
@@ -294,7 +293,7 @@ Version: 1.0
         width: 140px;
     }
     .margin-top-align{
-        margin-top: 80px!important;
+        margin-top: 10px!important;
     }
     .profile-left-sidebar-margin-top-align{
         margin-top: 50px!important;
@@ -474,7 +473,18 @@ Version: 1.0
     font-size: 28px;
     font-family: "tw-cen-mt";
     color: #216db1;
+    text-align: center;
     margin-top: 25px;
+}
+.dashboard-box-option-layout{
+    border: 2px solid #216db1;
+    text-align: center;
+    padding: 50px;
+}
+.dashboard-box-option-layout h2{
+    font-size: 18px;
+    font-family: "tw-cen-mt";
+    color: #216db1;
 }
 /* ---------------------------- Saved Ads -------------------------------- */
 .saved-ads-product-heading{
@@ -507,15 +517,17 @@ Version: 1.0
     color: #484848;
     line-height: 1.2em;
     font-weight: normal;
+    margin-top: -5px;
 }
 .saved-ads-product-price-title,.saved-ads-product-id-title{
     font-family: "tw-cen-mt";
     color: #216db1;
 }
 .saved-ads-product-price-amount,.saved-ads-product-id{
- font-family: "tw-cen-mt";
+    font-family: "tw-cen-mt";
     color: #f68521;
     font-size: 16px;
+    margin-top: -2px;
 }
 /* ---------------------------- My Ads -------------------------------- */
 .my-ads-product-heading{
@@ -548,6 +560,7 @@ Version: 1.0
     color: #484848;
     line-height: 1.2em;
     font-weight: normal;
+    margin-top: -5px;
 }
 .my-ads-product-price-title,.my-ads-product-id-title{
     font-family: "tw-cen-mt";
@@ -557,16 +570,27 @@ Version: 1.0
     font-family: "tw-cen-mt";
     color: #f68521;
     font-size: 16px;
+    margin-top: -2px;
+}
+.my-ads-option-links i{
+    color: #216db1;
+    font-size: 14px;
+}
+.my-ads-option-links .option{
+    font-family: "tw-cen-mt";
+    color: #f68521;
+    font-size: 13px;
+    display: inline;
 }
 /* ---------------------------- Messages Inbox -------------------------------- */
 .message-inbox-header-layout{
     background-color: #216db1;
-    padding: 1px 55px;
+    padding: 1px 15px;
 }
 .message-inbox-header-title{
     font-family: "tw-cen-mt";
     color: #fff;
-    font-family: sans-serif;
+    font-size: 16px;
 }
 .message-inbox-content-layout{
     background-color: #FFFFFF;
@@ -575,30 +599,35 @@ Version: 1.0
     -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
     box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
-    padding: 10px;
+    padding: 5px 10px;
 }
 .message-inbox-content-layout:hover{
     border-left: 5px solid #f68521;
     cursor: pointer;
 }
 .message-inbox-user-image{
-    width: 60px;
+    width: 36px;
     background: #f68521;
     border-radius: 50%;
     float: right;
+    margin-top: -13px;
+}
+.message-inbox-checkbox{
+    position: relative;
+    top: 10px;
 }
 .message-inbox-sender-name{
     font-family: "tw-cen-mt";
     color: #484848;
-    font-size: 22px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+    font-size: 18px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     line-height: 100%;
 }
 .message-inbox-message-subject{
     font-family: "tw-cen-mt";
     color: #484848;
-    font-size: 15px;
+    font-size: 14px;
     margin-top: 0px;
     margin-bottom: 0px;
     line-height: 100%;
@@ -607,6 +636,7 @@ Version: 1.0
     font-family: "tw-cen-mt";
     font-size: 15px;
     color: #216db1;
+    margin-top: 10px;
 }
 .message-inbox-mesage-delete-icon:hover{
     cursor: pointer;
@@ -616,7 +646,6 @@ Version: 1.0
 .featured-ad-stats-layout{
     background-color: #fff; 
     border-radius: 10px;
-    padding: 10px 20px; 
 }
 .featured-ad-stats-account-summary-layout{
     background-color: #EEE;
@@ -650,6 +679,13 @@ Version: 1.0
 
 
 /* --------------------- Home Page Search Box -------------------------------------  */
+/* --------------------- Landing Page -------------------------------------  */
+.search-box-layout-bg{
+    height: 606px;
+}
+.search-box-pagelet{
+    margin-top: 150px;
+}
 
 .home-page-search-box-layout > typeahead-container > ul{
     border-radius: 0!important;
@@ -785,24 +821,29 @@ Version: 1.0
     font-family: "tw-cen-mt";
     font-size: 24px;
     color: #216db1;
-    margin-top: 36px;
+    margin-top: 0;
 }
 .featured-ad-label{
     font-family: "tw-cen-mt";
     font-weight: normal;
     color: #216db1;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: normal;
     margin-top: 5px;
+}
+.featured-ad-paragraph{
+    font-family: "tw-cen-mt";
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.5em;
 }
 /* --------------------- Edit Profile -------------------------------------  */
 .edit-profile-heading{
     font-family: "tw-cen-mt";
-    font-weight: normal;
     color: #216db1;
     font-size: 24px;
     font-weight: normal;
-    margin-top: 20px;
+    margin-top: 0;
 }
 .edit-profile-label{
     font-family: "tw-cen-mt";
