--- a/web/resources/css/tabbed-panels.css
+++ b/web/resources/css/tabbed-panels.css
@@ -55,7 +55,7 @@
     box-sizing: border-box;
     width: 100%;
     margin: 2.5em 0 0 -100%;
-    padding: 10px;
+    padding: 10px 0px;
     border-radius: 4px;
     background: #fff;
 }
